Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92389

QQuick3DInstancing not clearing m_instanceDataChanged

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.1.1, 6.2.0 Alpha
    • 6.1
    • Quick: 3D
    • None
    • 8f1d1ed0b1793d2dd2b48387c74d7928eb830a98 (qt/qtquick3d/dev) fe75822bf7fafe12475e9270ef503a6a972b47e9 (qt/qtquick3d/6.1)

      Looked into QQuick3DInstancing and it seemed like m_instanceDataChanged is never set to false. Please check.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tvete Paul Olav Tvete
            kagro Kaj Grönholm
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes