Mark as not dirty after updating

m_instanceDataChanged was never set to false, so the instance data would
be re-uploaded each time updateSpatialNode() was called.

Fixes: QTBUG-92389
Change-Id: Ia822135dca41480b6d79a37fad92eddbe58772f6
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>
(cherry picked from commit 8f1d1ed0b1793d2dd2b48387c74d7928eb830a98)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>